# kernel-kv

./: .gitignore  Cargo.toml  LICENSE  kv-module.rs  readme.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
assets/: get-read-flow.md
hkv-bench/: Cargo.toml  README.md
hkv-client/src/: client.rs  lib.rs  pool.rs  resp.rs
hkv-client/tests/: client.rs
hkv-common/: Cargo.toml
hkv-common/src/: ioctl.rs  lib.rs  protocol.rs  types.rs
hkv-engine/src/: memory.rs
hkv-server/: Cargo.toml
hkv-server/src/: main.rs  metrics.rs  server.rs
kv-core/: Cargo.toml
kv-core/src/: main.rs
kv-core/src/storage_struct/: key.rs  mod.rs  value.rs
